implemented grpc clients methods

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+LOCAL_ENV=true
+MOCK_AUTH=true
 GCP_ID=fitness-club-service
 HTTP_PORT=3000
 CORS_ALLOWED_ORIGINS=http://localhost:8080
-LOCAL_ENV=true
-MOCK_AUTH=true
+CUSTOMER_GRPC_ADDR=users-grpc:3000
+TRAINER_GRPC_ADDR=trainer-grpc:3000
+GRPC_WITH_TLS=false
